# AttentionLeak_Salicon

./: .gitignore  README.md  pyproject.toml  train.py
conf/: config.yaml
conf/data/: augmentation.yaml  default.yaml
conf/experiment/: chart_simple.yaml  complexity.yaml  image_type.yaml  multi_task_model.yaml  question_type.yaml
conf/model/: multi_task.yaml  single_label.yaml
conf/model/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
data/maps/: 12_category.csv  4_category.csv  image_questions.json
src/app/: conf_resolver.py  data.py  model.py
